fix spacing in header

--- a/less/header-style.less
+++ b/less/header-style.less
@@ -50,7 +50,7 @@ header {
 // -------------------------
 
 .header__first-row.flex-container {
-    margin: 30px 0 15px;
+    margin: 30px 0 10px;
     min-height: 30px;
     @media only screen and (min-width : 770px) {
         margin: 30px 0 20px;
@@ -210,6 +210,7 @@ header {
   margin-right: 10px;
   @media @tablet {
     margin-right: 0;
+    margin-top: 5px;
     margin-bottom: 5px;
   }
 }
